# Horde

./: Cargo.toml  Makefile  README.md  Rocket.toml  rocket.toml  techstack.md  techstack.yml
nginx/: index.html  nginx.yml
src/: main.rs
src/cmd/: app.rs  migrate.rs  mod.rs  serve.rs  smtp.rs  truncate.rs
src/controller/: email.rs  health.rs  home.rs  lock.rs  message.rs  mod.rs  project.rs  ready.rs  state.rs  tf.rs
src/db/: client.rs  db.rs  migrate.rs  mod.rs
src/util/: config.rs  environ.rs  mod.rs
