[package]
name = "horde-rs"
version = "0.1.0"
authors = ["Clivern <hello@clivern.com>"]
edition = "2021"
description = "A Fast, Secure and Reliable Terraform Backend, Set up in Minutes."
license = "MIT"
repository = "https://github.com/Clivern/Horde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = "4.5.47"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.221"
serde_json = "1.0.144"
serde_with = "3.14.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
rand = "0.9.2"


[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
